--- a/css/styles.css
+++ b/css/styles.css
@@ -65,38 +65,6 @@
     float: left;
     width: 100%;
     padding: 0 0.625em; } }
-/*@font-face {
-	font-family: 'oswald';
-	src: url('../fonts/oswald-bold-webfont.eot');
-	src: url('../fonts/oswald-bold-webfont.eot?#iefix') format('embedded-opentype'),
-	url('../fonts/oswald-bold-webfont.woff') format('woff'),
-	url('../fonts/oswald-bold-webfont.ttf') format('truetype'),
-	url('../fonts/oswald-bold-webfont.svg#oswaldbold') format('svg');
-	font-weight: bold;
-	font-style: normal;
-}
-
-@font-face {
-	font-family: 'oswald';
-	src: url('../fonts/oswald-light-webfont.eot');
-	src: url('../fonts/oswald-light-webfont.eot?#iefix') format('embedded-opentype'),
-	url('../fonts/oswald-light-webfont.woff') format('woff'),
-	url('../fonts/oswald-light-webfont.ttf') format('truetype'),
-	url('../fonts/oswald-light-webfont.svg#oswaldlight') format('svg');
-	font-weight: 200;
-	font-style: normal;
-}
-
-@font-face {
-	font-family: 'oswald';
-	src: url('../fonts/oswald-regular-webfont.eot');
-	src: url('../fonts/oswald-regular-webfont.eot?#iefix') format('embedded-opentype'),
-	url('../fonts/oswald-regular-webfont.woff') format('woff'),
-	url('../fonts/oswald-regular-webfont.ttf') format('truetype'),
-	url('../fonts/oswald-regular-webfont.svg#oswaldbook') format('svg');
-	font-weight: normal;
-	font-style: normal;
-}*/
 /*
   ---- ---- ---- ---- RESET STYLESHEET ---- ---- ---- ----
 */
@@ -136,19 +104,14 @@ audio[controls], canvas, video {
 /* BODY */
 @-webkit-viewport {
   width: device-width; }
-
 @-moz-viewport {
   width: device-width; }
-
 @-ms-viewport {
   width: device-width; }
-
 @-o-viewport {
   width: device-width; }
-
 @viewport {
   width: device-width; }
-
 html {
   width: 100%;
   height: 100%;
@@ -723,7 +686,8 @@ tbody tr:hover th {
   max-width: 960px;
   display: block;
   margin-left: auto;
-  margin-right: auto; }
+  margin-right: auto;
+  overflow: hidden; }
 
 .body--header {
   text-align: center; }
@@ -732,43 +696,141 @@ tbody tr:hover th {
   margin-bottom: 16px;
   margin-bottom: 1rem; }
 
-.main--section {
-  margin-top: 3em; }
+.body--footer {
+  position: relative;
+  padding: 1em 0 0 0;
+  *zoom: 1; }
+  .body--footer:before, .body--footer:after {
+    display: table;
+    content: ""; }
+  .body--footer:after {
+    clear: both; }
 
-@media only screen and (min-width: 36.5em) {
-  .main--section {
-    display: -ms-flexbox;
-    -ms-box-orient: horizontal;
-    display: -moz-box;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: flex;
-    -webkit-box-pack: justify;
-    -moz-box-pack: justify;
-    -ms-flex-pack: justify;
-    -webkit-justify-content: space-between;
-    justify-content: space-between;
-    -webkit-box-align: start;
-    -moz-box-align: start;
-    -ms-flex-align: start;
-    -webkit-align-items: flex-start;
-    align-items: flex-start; }
-    .main--section.reverse .section--content {
-      -webkit-box-ordinal-group: 2;
-      -moz-box-ordinal-group: 2;
-      -ms-flex-order: 2;
-      -webkit-order: 2;
-      order: 2; }
-    .main--section.reverse .section--graphic {
-      -webkit-box-ordinal-group: 1;
-      -moz-box-ordinal-group: 1;
-      -ms-flex-order: 1;
-      -webkit-order: 1;
-      order: 1; }
+.sources {
+  clear: both;
+  position: relative;
+  width: 100%;
+  margin-top: 4em;
+  padding: 1em;
+  background: #404040;
+  text-align: left; }
+  .sources.active {
+    top: auto;
+    bottom: 0; }
+  .sources ol {
+    margin-bottom: 0;
+    padding: 0; }
+  .sources li {
+    padding-left: 0; }
+  .sources a {
+    color: blue; }
+    .sources a:hover, .sources a:active, .sources a:focus, .sources a:visited {
+      color: blue; }
 
-  .section--content {
-    width: 33.33333%; }
+.sources--tab {
+  position: absolute;
+  left: .5em;
+  bottom: 100%;
+  padding: .5em;
+  padding-bottom: .125em;
+  background: white;
+  border: 1px solid #cccccc;
+  border-bottom: 0; }
+  .sources--tab:hover, .sources--tab:active, .sources--tab:focus, .sources--tab:visited {
+    color: blue;
+    border: 1px solid #cccccc;
+    border-bottom: 0; }
 
-  .section--graphic {
-    width: 58.33333%;
-    text-align: center; } }
+.share-active #sourcesToggle {
+  opacity: .5; }
+.share-active .share--list {
+  display: block; }
+
+.sources-active #shareToggle {
+  opacity: .5; }
+.sources-active .sources--list {
+  display: block; }
+
+.sources--list,
+.share--list {
+  display: none; }
+
+.sources--nav {
+  position: absolute;
+  left: 1em;
+  bottom: 100%; }
+  .sources--nav a {
+    display: inline-block;
+    position: relative;
+    padding: .25em 1em;
+    background: #404040;
+    border: 0;
+    color: white;
+    font-size: .875em; }
+    .sources--nav a:first-child {
+      margin-right: 1em; }
+    .sources--nav a:hover, .sources--nav a:active, .sources--nav a:focus, .sources--nav a:visited {
+      color: white;
+      border: 0;
+      text-decoration: none; }
+
+.csstransforms .sources--nav a:after {
+  content: '';
+  display: block;
+  position: absolute;
+  right: -1.75em;
+  top: 10px;
+  border-top: 1.375em solid #404040;
+  border-left: 1.375em solid transparent;
+  border-right: 1.375em solid transparent;
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg); }
+
+.share-options {
+  padding: 1em 0; }
+  .share-options a {
+    display: inline-block;
+    height: 46px;
+    width: 46px;
+    margin-right: .75em;
+    background: url(../img/share-icons.png) no-repeat left top/auto 46px; }
+  .share-options .twitter {
+    background-position: -75px 0; }
+  .share-options .gplus {
+    background-position: -151px 0; }
+  .share-options .email {
+    background-position: -226px 0; }
+
+.embed-code-wrapper {
+  font-family: "Open Sans", sans-serif;
+  color: white; }
+
+.embed-code-wrapper a {
+  font-family: "Open Sans", sans-serif;
+  font-size: .875em; }
+
+.embed-code {
+  max-width: 500px;
+  background: #e6e6e6;
+  color: #1a1a1a;
+  font-family: sans-serif;
+  opacity: 1 !important;
+  cursor: default !important;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+  -webkit-border-radius: 0.25em;
+  -moz-border-radius: 0.25em;
+  border-radius: 0.25em;
+  background-clip: padding-box;
+  border: 2px solid #e6e6e6;
+  font-size: .75em;
+  margin: .5rem 0; }
+
+.static-embed {
+  display: none; }
+
+/*# sourceMappingURL=styles.css.map */
