line-height of body

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -32,7 +32,7 @@ $textFontSize: 1em;
 // Typography
 $baseFont: 'Open Sans', sans-serif;
 $baseFontSize: 100%;
-$baselineHeight: 1.35em;
+$baselineHeight: 1.35;
 $baseFontWeight: 300;
 $headingFont: $baseFont;
 $headingLineHeight: 1.1;
