--- a/dev/css/styles.css
+++ b/dev/css/styles.css
@@ -127,7 +127,7 @@ body {
   font-family: "Open Sans", sans-serif;
   font-size: 100%;
   font-weight: 300;
-  line-height: 1.35em;
+  line-height: 1.35;
   color: #333333; }
 
 .clearfix {
@@ -161,7 +161,7 @@ h6 {
 
 h1,
 .h1 {
-  margin-bottom: 0.9em;
+  margin-bottom: 0.9;
   color: #333333;
   font-size: 30px;
   font-size: 1.875rem;
@@ -172,7 +172,7 @@ h1,
 
 h2,
 .h2 {
-  margin-bottom: 0.9em;
+  margin-bottom: 0.9;
   color: #333333;
   font-size: 24px;
   font-size: 1.5rem;
@@ -183,7 +183,7 @@ h2,
 
 h3,
 .h3 {
-  margin-bottom: 0.77143em;
+  margin-bottom: 0.77143;
   color: #333333;
   font-size: 22px;
   font-size: 1.375rem;
@@ -194,7 +194,7 @@ h3,
 
 h4,
 .h4 {
-  margin-bottom: 0.77143em;
+  margin-bottom: 0.77143;
   color: #333333;
   font-size: 20px;
   font-size: 1.25rem;
@@ -205,7 +205,7 @@ h4,
 
 h5,
 .h5 {
-  margin-bottom: 0.675em;
+  margin-bottom: 0.675;
   color: #333333;
   font-size: 18px;
   font-size: 1.125rem;
@@ -216,7 +216,7 @@ h5,
 
 h6,
 .h6 {
-  margin-bottom: 0.675em;
+  margin-bottom: 0.675;
   color: 1em;
   font-size: 16px;
   font-size: 1rem; }
@@ -227,12 +227,12 @@ h6,
 ol,
 ul,
 dl {
-  margin-bottom: 1.35em;
-  line-height: 1.6875em; }
+  margin-bottom: 1.35;
+  line-height: 1.6875; }
 
 p,
 address {
-  margin-bottom: 0.675em; }
+  margin-bottom: 0.675; }
 
 small {
   font-size: .875em; }
@@ -270,7 +270,7 @@ blockquote {
 
 dl,
 dd {
-  margin-bottom: 0.675em; }
+  margin-bottom: 0.675; }
 
 dt {
   font-weight: bold; }
@@ -390,7 +390,7 @@ img {
   -ms-interpolation-mode: bicubic; }
 
 figure {
-  margin-bottom: 1.35em; }
+  margin-bottom: 1.35; }
 
 figcaption {
   display: block;
@@ -423,7 +423,7 @@ textarea,
   width: -webkit-calc(100% - .5em);
   width: calc(100% - .5em);
   padding: 0.375em 1.5em;
-  margin-bottom: 1.35em;
+  margin-bottom: 1.35;
   background-color: #e2e2e2;
   border: 1px solid #e2e2e2;
   color: #333333;
@@ -641,7 +641,7 @@ textarea[readonly] {
 table {
   height: 100%;
   width: 100%;
-  margin-bottom: 0.675em;
+  margin-bottom: 0.675;
   background-color: transparent;
   border-spacing: 0; }
 
@@ -649,7 +649,7 @@ th,
 td {
   padding: 0.25em;
   vertical-align: middle;
-  line-height: 1.35em;
+  line-height: 1.35;
   text-align: left;
   font-size: .875em; }
 
@@ -683,10 +683,6 @@ tbody tr:hover th {
   background-color: #cccccc; }
 
 .wrapper {
-  max-width: 960px;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
   overflow: hidden; }
 
 .body--header {
