change one usage of white to #fff

--- a/dev/scss/_variables.scss
+++ b/dev/scss/_variables.scss
@@ -89,7 +89,7 @@ $labelFontSize: (18rem/16);
 $labelColor: $baseFontColor;
 $labelFontWeight: bold;
 
-$buttonBackground: white;
+$buttonBackground: #fff;
 //$buttonBackground2: $siteLightGreen; //Uncomment if you want a gradient background on a button. Also uncomment gradient in
 $buttonBorderColor: $baseFontColor;
 $buttonBorderWidth: .25rem;
