--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -2,13 +2,11 @@
 
 @import "fonts";
 @import "variables";
-@import "reset-normalize";
+@import "normalize";
 
 @import "general";
 
 @import "header";
-
 @import "content";
-
 @import "footer";
 @import "sources";
