--- a/dev/scss/_normalize.scss
+++ b/dev/scss/_normalize.scss
@@ -241,6 +241,8 @@ sub {
 
 // Remove border when inside `a` element in IE 8/9/10.
 img {
+    max-width: 100%;
+    height: auto;
     border: 0;
 }
 
@@ -252,9 +254,9 @@ svg:not(:root) {
 // Grouping content
 // ==========================================================================
 
-// Address margin not present in IE 8/9 and Safari.
+// Remove margin found in non-IE
 figure {
-    margin: 1em 40px;
+    margin: 0;
 }
 
 // Address differences between Firefox and other browsers.
