--- a/dev/css/styles.css
+++ b/dev/css/styles.css
@@ -232,13 +232,15 @@ sub {
   bottom: -0.25em; }
 
 img {
+  max-width: 100%;
+  height: auto;
   border: 0; }
 
 svg:not(:root) {
   overflow: hidden; }
 
 figure {
-  margin: 1em 40px; }
+  margin: 0; }
 
 hr {
   -moz-box-sizing: content-box;
@@ -486,12 +488,12 @@ th {
   text-align: center; }
 
 .header--title {
-  margin-bottom: 16px;
   margin-bottom: 1rem; }
 
 .body--footer {
   position: relative;
-  padding: 1em 0 0 0;
+  padding: 0;
+  padding-top: 1rem;
   *zoom: 1; }
   .body--footer:before, .body--footer:after {
     display: table;
@@ -503,8 +505,8 @@ th {
   clear: both;
   position: relative;
   width: 100%;
-  margin-top: 4em;
-  padding: 1em;
+  margin-top: 4rem;
+  padding: 1rem;
   background: #404040;
   text-align: left; }
   .sources.active {
@@ -522,16 +524,16 @@ th {
 
 .sources--tab {
   position: absolute;
-  left: .5em;
+  left: .5rem;
   bottom: 100%;
-  padding: .5em;
-  padding-bottom: .125em;
+  padding: .5rem;
+  padding-bottom: 0.125rem;
   background: white;
-  border: 1px solid #e6e6e6;
+  border: 0.0625rem solid #e6e6e6;
   border-bottom: 0; }
   .sources--tab:hover, .sources--tab:active, .sources--tab:focus, .sources--tab:visited {
     color: #00f;
-    border: 1px solid #e6e6e6;
+    border: 0.0625rem solid #e6e6e6;
     border-bottom: 0; }
 
 .share-active #sourcesToggle {
@@ -550,18 +552,18 @@ th {
 
 .sources--nav {
   position: absolute;
-  left: 1em;
+  left: 1rem;
   bottom: 100%; }
   .sources--nav a {
     display: inline-block;
     position: relative;
-    padding: .25em 1em;
+    padding: .25rem 1rem;
     background: #404040;
     border: 0;
     color: white;
-    font-size: .875em; }
+    font-size: 0.875rem; }
     .sources--nav a:first-child {
-      margin-right: 1em; }
+      margin-right: 1rem; }
     .sources--nav a:hover, .sources--nav a:active, .sources--nav a:focus, .sources--nav a:visited {
       color: white;
       border: 0;
@@ -571,11 +573,11 @@ th {
   content: '';
   display: block;
   position: absolute;
-  right: -1.75em;
-  top: 10px;
-  border-top: 1.375em solid #404040;
-  border-left: 1.375em solid transparent;
-  border-right: 1.375em solid transparent;
+  right: -1.75rem;
+  top: 0.625rem;
+  border-top: 1.375rem solid #404040;
+  border-left: 1.375rem solid transparent;
+  border-right: 1.375rem solid transparent;
   -webkit-transform: rotate(45deg);
   -moz-transform: rotate(45deg);
   -ms-transform: rotate(45deg);
@@ -586,16 +588,17 @@ th {
   padding: 1em 0; }
   .share-options a {
     display: inline-block;
-    height: 46px;
-    width: 46px;
-    margin-right: .75em;
-    background: url(../img/share-icons.png) no-repeat left top/auto 46px; }
+    height: 2.875rem;
+    width: 2.875rem;
+    margin-right: .75rem;
+    background: url(../img/share-icons.png) no-repeat left top;
+    background-size: auto 2.875rem; }
   .share-options .twitter {
-    background-position: -75px 0; }
+    background-position: -4.6875rem 0; }
   .share-options .gplus {
-    background-position: -151px 0; }
+    background-position: -9.4375rem 0; }
   .share-options .email {
-    background-position: -226px 0; }
+    background-position: -14.125rem 0; }
 
 .embed-code-wrapper {
   font-family: "Open Sans", sans-serif;
@@ -606,7 +609,8 @@ th {
   font-size: .875em; }
 
 .embed-code {
-  max-width: 500px;
+  width: 18.75rem;
+  max-width: 100%;
   background: #e6e6e6;
   color: #1a1a1a;
   font-family: sans-serif;
@@ -615,12 +619,12 @@ th {
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
   box-shadow: none;
-  -webkit-border-radius: 0.25em;
-  -moz-border-radius: 0.25em;
-  border-radius: 0.25em;
+  -webkit-border-radius: 0.25rem;
+  -moz-border-radius: 0.25rem;
+  border-radius: 0.25rem;
   background-clip: padding-box;
-  border: 2px solid #e6e6e6;
-  font-size: .75em;
+  border: 0.125rem solid #e6e6e6;
+  font-size: .75rem;
   margin: .5rem 0; }
 
 .static-embed {
