--- a/dev/scss/_footer.scss
+++ b/dev/scss/_footer.scss
@@ -1,6 +1,7 @@
 .body--footer {
 	position: relative;
-    padding: 1em 0 0 0;
+    padding: 0;
+    padding-top: 1rem;
     @include clearfix();
 }
 
