--- a/dev/css/styles.css
+++ b/dev/css/styles.css
@@ -10,61 +10,51 @@
     float: left;
     width: 8.33333%;
     padding: 0 0.625em; }
-
   .columns-2 {
     float: left;
     width: 16.66667%;
     padding: 0 0.625em; }
-
   .columns-3 {
     float: left;
     width: 25%;
     padding: 0 0.625em; }
-
   .columns-4 {
     float: left;
     width: 33.33333%;
     padding: 0 0.625em; }
-
   .columns-5 {
     float: left;
     width: 41.66667%;
     padding: 0 0.625em; }
-
   .columns-6 {
     float: left;
     width: 50%;
     padding: 0 0.625em; }
-
   .columns-7 {
     float: left;
     width: 58.33333%;
     padding: 0 0.625em; }
-
   .columns-8 {
     float: left;
     width: 66.66667%;
     padding: 0 0.625em; }
-
   .columns-9 {
     float: left;
     width: 75%;
     padding: 0 0.625em; }
-
   .columns-10 {
     float: left;
     width: 83.33333%;
     padding: 0 0.625em; }
-
   .columns-11 {
     float: left;
     width: 91.66667%;
     padding: 0 0.625em; }
-
   .columns-12 {
     float: left;
     width: 100%;
     padding: 0 0.625em; } }
+
 *,
 *:before,
 *:after {
@@ -90,18 +80,23 @@ body {
 @-webkit-viewport {
   width: device-width;
   zoom: 1; }
+
 @-moz-viewport {
   width: device-width;
   zoom: 1; }
+
 @-ms-viewport {
   width: device-width;
   zoom: 1; }
+
 @-o-viewport {
   width: device-width;
   zoom: 1; }
+
 @viewport {
   width: device-width;
   zoom: 1; }
+
 article,
 aside,
 details,
@@ -134,7 +129,8 @@ template {
 a {
   background-color: transparent;
   color: #00f; }
-  a:hover, a:focus {
+  a:hover,
+  a:focus {
     outline: 0;
     color: #0000e6; }
   a:visited {
@@ -302,7 +298,8 @@ select,
   font-family: "Open Sans", sans-serif;
   font-size: 1rem;
   text-transform: none; }
-  input[type="text"]:active, input[type="text"]:focus,
+  input[type="text"]:active,
+  input[type="text"]:focus,
   input[type="date"]:active,
   input[type="date"]:focus,
   input[type="time"]:active,
@@ -383,7 +380,8 @@ input[type="reset"] {
   input[type="submit"].alt,
   input[type="reset"].alt {
     background-color: gray; }
-  button:active, button:focus,
+  button:active,
+  button:focus,
   .button:active,
   .button:focus,
   input[type="button"]:active,
@@ -393,7 +391,9 @@ input[type="reset"] {
   input[type="reset"]:active,
   input[type="reset"]:focus {
     outline-color: none; }
-  button:hover, button:focus, button:visited,
+  button:hover,
+  button:focus,
+  button:visited,
   .button:hover,
   .button:focus,
   .button:visited,
@@ -411,13 +411,13 @@ input[type="reset"] {
     border: 0.25rem solid gray; }
 
 button,
-html input[type="button"],
-input[type="reset"],
+html input[type="button"], input[type="reset"],
 input[type="submit"] {
   -webkit-appearance: button;
   cursor: pointer; }
 
-button[disabled], button[readonly],
+button[disabled],
+button[readonly],
 html input[disabled],
 html input[readonly],
 textarea[disabled],
@@ -495,7 +495,8 @@ th {
   padding: 0;
   padding-top: 1rem;
   *zoom: 1; }
-  .body--footer:before, .body--footer:after {
+  .body--footer:before,
+  .body--footer:after {
     display: table;
     content: ""; }
   .body--footer:after {
@@ -519,7 +520,10 @@ th {
     padding-left: 0; }
   .sources a {
     color: #00f; }
-    .sources a:hover, .sources a:active, .sources a:focus, .sources a:visited {
+    .sources a:hover,
+    .sources a:active,
+    .sources a:focus,
+    .sources a:visited {
       color: #00f; }
 
 .sources--tab {
@@ -531,18 +535,23 @@ th {
   background: white;
   border: 0.0625rem solid #e6e6e6;
   border-bottom: 0; }
-  .sources--tab:hover, .sources--tab:active, .sources--tab:focus, .sources--tab:visited {
+  .sources--tab:hover,
+  .sources--tab:active,
+  .sources--tab:focus,
+  .sources--tab:visited {
     color: #00f;
     border: 0.0625rem solid #e6e6e6;
     border-bottom: 0; }
 
 .share-active #sourcesToggle {
   opacity: .5; }
+
 .share-active .share--list {
   display: block; }
 
 .sources-active #shareToggle {
   opacity: .5; }
+
 .sources-active .sources--list {
   display: block; }
 
@@ -557,14 +566,17 @@ th {
   .sources--nav a {
     display: inline-block;
     position: relative;
-    padding: .25rem 1rem;
+    padding: 0.25rem 1rem;
     background: #404040;
     border: 0;
     color: white;
     font-size: 0.875rem; }
     .sources--nav a:first-child {
       margin-right: 1rem; }
-    .sources--nav a:hover, .sources--nav a:active, .sources--nav a:focus, .sources--nav a:visited {
+    .sources--nav a:hover,
+    .sources--nav a:active,
+    .sources--nav a:focus,
+    .sources--nav a:visited {
       color: white;
       border: 0;
       text-decoration: none; }
