--- a/dev/scss/sassquatch/scss/_backgrounds.scss
+++ b/dev/scss/sassquatch/scss/_backgrounds.scss
@@ -70,8 +70,8 @@
 		$w3cColors: #{$w3cColors + nth($colorList, $i)};
 
 		@if $i < $max {
-			$colors: #{$colors + ", "};
-			$w3cColors: #{$w3cColors + ", "};
+			$colors: #{$colors + ', '};
+			$w3cColors: #{$w3cColors + ', '};
 		}
 	}
 
