--- a/dev/scss/sassquatch/scss/_grid-classes.scss
+++ b/dev/scss/sassquatch/scss/_grid-classes.scss
@@ -1,6 +1,6 @@
 /*
 	Outputs classes (.columns-#) for each column <= $nbrOfColumns in _variables.scss
-	<div class="columns-6"></div> is 50% width in a 12-column layout
+	<div class='columns-6'></div> is 50% width in a 12-column layout
 */
 
 $columnCssCounter: 1;
