--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -1,12 +1,12 @@
-@import "sassquatch/sassquatch";
+@import 'sassquatch/sassquatch';
 
-@import "fonts";
-@import "variables";
-@import "normalize";
+@import 'fonts';
+@import 'variables';
+@import 'normalize';
 
-@import "general";
+@import 'general';
 
-@import "header";
-@import "content";
-@import "footer";
-@import "sources";
+@import 'header';
+@import 'content';
+@import 'footer';
+@import 'sources';
