--- a/dev/css/styles.css
+++ b/dev/css/styles.css
@@ -1,6 +1,6 @@
 /*
 	Outputs classes (.columns-#) for each column <= $nbrOfColumns in _variables.scss
-	<div class="columns-6"></div> is 50% width in a 12-column layout
+	<div class='columns-6'></div> is 50% width in a 12-column layout
 */
 .columns-1, .columns-2, .columns-3, .columns-4, .columns-5, .columns-6, .columns-7, .columns-8, .columns-9, .columns-10, .columns-11, .columns-12 {
   width: 100%; }
@@ -58,8 +58,6 @@
 *,
 *:before,
 *:after {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
   box-sizing: border-box;
   word-wrap: break-word; }
 
@@ -86,10 +84,6 @@ body {
   zoom: 1; }
 
 @-ms-viewport {
-  width: device-width;
-  zoom: 1; }
-
-@-o-viewport {
   width: device-width;
   zoom: 1; }
 
@@ -239,7 +233,6 @@ figure {
   margin: 0; }
 
 hr {
-  -moz-box-sizing: content-box;
   box-sizing: content-box;
   height: 0; }
 
@@ -278,17 +271,17 @@ label {
   font-size: 1.125rem;
   font-weight: bold; }
 
-input[type="text"],
-input[type="date"],
-input[type="time"],
-input[type="datetime"],
-input[type="datetime-local"],
-input[type="url"],
-input[type="email"],
-input[type="number"],
-input[type="search"],
-input[type="file"],
-input[type="password"],
+input[type='text'],
+input[type='date'],
+input[type='time'],
+input[type='datetime'],
+input[type='datetime-local'],
+input[type='url'],
+input[type='email'],
+input[type='number'],
+input[type='search'],
+input[type='file'],
+input[type='password'],
 select,
 .textbox {
   padding: 0.375rem 1.5rem;
@@ -298,28 +291,28 @@ select,
   font-family: "Open Sans", sans-serif;
   font-size: 1rem;
   text-transform: none; }
-  input[type="text"]:active,
-  input[type="text"]:focus,
-  input[type="date"]:active,
-  input[type="date"]:focus,
-  input[type="time"]:active,
-  input[type="time"]:focus,
-  input[type="datetime"]:active,
-  input[type="datetime"]:focus,
-  input[type="datetime-local"]:active,
-  input[type="datetime-local"]:focus,
-  input[type="url"]:active,
-  input[type="url"]:focus,
-  input[type="email"]:active,
-  input[type="email"]:focus,
-  input[type="number"]:active,
-  input[type="number"]:focus,
-  input[type="search"]:active,
-  input[type="search"]:focus,
-  input[type="file"]:active,
-  input[type="file"]:focus,
-  input[type="password"]:active,
-  input[type="password"]:focus,
+  input[type='text']:active,
+  input[type='text']:focus,
+  input[type='date']:active,
+  input[type='date']:focus,
+  input[type='time']:active,
+  input[type='time']:focus,
+  input[type='datetime']:active,
+  input[type='datetime']:focus,
+  input[type='datetime-local']:active,
+  input[type='datetime-local']:focus,
+  input[type='url']:active,
+  input[type='url']:focus,
+  input[type='email']:active,
+  input[type='email']:focus,
+  input[type='number']:active,
+  input[type='number']:focus,
+  input[type='search']:active,
+  input[type='search']:focus,
+  input[type='file']:active,
+  input[type='file']:focus,
+  input[type='password']:active,
+  input[type='password']:focus,
   select:active,
   select:focus,
   .textbox:active,
@@ -358,9 +351,9 @@ textarea {
 
 button,
 .button,
-input[type="button"],
-input[type="submit"],
-input[type="reset"] {
+input[type='button'],
+input[type='submit'],
+input[type='reset'] {
   display: inline-block;
   width: auto;
   height: auto;
@@ -376,20 +369,20 @@ input[type="reset"] {
   cursor: pointer; }
   button.alt,
   .button.alt,
-  input[type="button"].alt,
-  input[type="submit"].alt,
-  input[type="reset"].alt {
+  input[type='button'].alt,
+  input[type='submit'].alt,
+  input[type='reset'].alt {
     background-color: gray; }
   button:active,
   button:focus,
   .button:active,
   .button:focus,
-  input[type="button"]:active,
-  input[type="button"]:focus,
-  input[type="submit"]:active,
-  input[type="submit"]:focus,
-  input[type="reset"]:active,
-  input[type="reset"]:focus {
+  input[type='button']:active,
+  input[type='button']:focus,
+  input[type='submit']:active,
+  input[type='submit']:focus,
+  input[type='reset']:active,
+  input[type='reset']:focus {
     outline-color: none; }
   button:hover,
   button:focus,
@@ -397,22 +390,22 @@ input[type="reset"] {
   .button:hover,
   .button:focus,
   .button:visited,
-  input[type="button"]:hover,
-  input[type="button"]:focus,
-  input[type="button"]:visited,
-  input[type="submit"]:hover,
-  input[type="submit"]:focus,
-  input[type="submit"]:visited,
-  input[type="reset"]:hover,
-  input[type="reset"]:focus,
-  input[type="reset"]:visited {
+  input[type='button']:hover,
+  input[type='button']:focus,
+  input[type='button']:visited,
+  input[type='submit']:hover,
+  input[type='submit']:focus,
+  input[type='submit']:visited,
+  input[type='reset']:hover,
+  input[type='reset']:focus,
+  input[type='reset']:visited {
     color: gray;
     text-decoration: none;
     border: 0.25rem solid gray; }
 
 button,
-html input[type="button"], input[type="reset"],
-input[type="submit"] {
+html input[type='button'], input[type='reset'],
+input[type='submit'] {
   -webkit-appearance: button;
   cursor: pointer; }
 
@@ -435,23 +428,21 @@ input::-moz-focus-inner {
 input {
   line-height: normal; }
 
-input[type="checkbox"],
-input[type="radio"] {
+input[type='checkbox'],
+input[type='radio'] {
   box-sizing: border-box;
   padding: 0; }
 
-input[type="number"]::-webkit-inner-spin-button,
-input[type="number"]::-webkit-outer-spin-button {
+input[type='number']::-webkit-inner-spin-button,
+input[type='number']::-webkit-outer-spin-button {
   height: auto; }
 
-input[type="search"] {
+input[type='search'] {
   -webkit-appearance: textfield;
-  -moz-box-sizing: content-box;
-  -webkit-box-sizing: content-box;
   box-sizing: content-box; }
 
-input[type="search"]::-webkit-search-cancel-button,
-input[type="search"]::-webkit-search-decoration {
+input[type='search']::-webkit-search-cancel-button,
+input[type='search']::-webkit-search-decoration {
   -webkit-appearance: none; }
 
 fieldset {
@@ -490,15 +481,21 @@ th {
 .header--title {
   margin-bottom: 1rem; }
 
+body {
+  background-image: linear-gradient(red, blue); }
+
+.main--section img {
+  border-radius: 50%; }
+
 .body--footer {
+  *zoom: 1;
   position: relative;
   padding: 0;
-  padding-top: 1rem;
-  *zoom: 1; }
+  padding-top: 1rem; }
   .body--footer:before,
   .body--footer:after {
     display: table;
-    content: ""; }
+    content: ''; }
   .body--footer:after {
     clear: both; }
 
@@ -591,9 +588,7 @@ th {
   border-left: 1.375rem solid transparent;
   border-right: 1.375rem solid transparent;
   -webkit-transform: rotate(45deg);
-  -moz-transform: rotate(45deg);
   -ms-transform: rotate(45deg);
-  -o-transform: rotate(45deg);
   transform: rotate(45deg); }
 
 .share-options {
@@ -628,11 +623,7 @@ th {
   font-family: sans-serif;
   opacity: 1 !important;
   cursor: default !important;
-  -webkit-box-shadow: none;
-  -moz-box-shadow: none;
   box-shadow: none;
-  -webkit-border-radius: 0.25rem;
-  -moz-border-radius: 0.25rem;
   border-radius: 0.25rem;
   background-clip: padding-box;
   border: 0.125rem solid #e6e6e6;
