--- a/dev/scss/_normalize.scss
+++ b/dev/scss/_normalize.scss
@@ -318,17 +318,17 @@ label {
     font-weight: $labelFontWeight;
 }
 
-input[type="text"],
-input[type="date"],
-input[type="time"],
-input[type="datetime"],
-input[type="datetime-local"],
-input[type="url"],
-input[type="email"],
-input[type="number"],
-input[type="search"],
-input[type="file"],
-input[type="password"],
+input[type='text'],
+input[type='date'],
+input[type='time'],
+input[type='datetime'],
+input[type='datetime-local'],
+input[type='url'],
+input[type='email'],
+input[type='number'],
+input[type='search'],
+input[type='file'],
+input[type='password'],
 select,
 .textbox {
     padding: $textboxPadding;
@@ -383,9 +383,9 @@ textarea {
 
 button,
 .button,
-input[type="button"],
-input[type="submit"],
-input[type="reset"] {
+input[type='button'],
+input[type='submit'],
+input[type='reset'] {
     display: inline-block;
     width: auto;
     height: auto;
@@ -423,9 +423,9 @@ input[type="reset"] {
 // 3. Improve usability and consistency of cursor style between image-type
 //    `input` and others.
 button,
-html input[type="button"],      // 1
-input[type="reset"],
-input[type="submit"] {
+html input[type='button'],      // 1
+input[type='reset'],
+input[type='submit'] {
     -webkit-appearance: button; // 2
     cursor: pointer;            // 3
 }
@@ -459,8 +459,8 @@ input {
 
 // 1. Address box sizing set to `content-box` in IE 8/9/10.
 // 2. Remove excess padding in IE 8/9/10.
-input[type="checkbox"],
-input[type="radio"] {
+input[type='checkbox'],
+input[type='radio'] {
     box-sizing: border-box; // 1
     padding: 0;             // 2
 }
@@ -468,15 +468,15 @@ input[type="radio"] {
 // Fix the cursor style for Chrome's increment/decrement buttons. For certain
 // `font-size` values of the `input`, it causes the cursor style of the
 // decrement button to change from `default` to `text`.
-input[type="number"]::-webkit-inner-spin-button,
-input[type="number"]::-webkit-outer-spin-button {
+input[type='number']::-webkit-inner-spin-button,
+input[type='number']::-webkit-outer-spin-button {
     height: auto;
 }
 
 // 1. Address `appearance` set to `searchfield` in Safari and Chrome.
 // 2. Address `box-sizing` set to `border-box` in Safari and Chrome
 //    (include `-moz` to future-proof).
-input[type="search"] {
+input[type='search'] {
     -webkit-appearance: textfield;   // 1
     -moz-box-sizing: content-box;
     -webkit-box-sizing: content-box; // 2
@@ -486,8 +486,8 @@ input[type="search"] {
 // Remove inner padding and search cancel button in Safari and Chrome on OS X.
 // Safari (but not Chrome) clips the cancel button when the search input has
 // padding (and `textfield` appearance).
-input[type="search"]::-webkit-search-cancel-button,
-input[type="search"]::-webkit-search-decoration {
+input[type='search']::-webkit-search-cancel-button,
+input[type='search']::-webkit-search-decoration {
     -webkit-appearance: none;
 }
 
