--- a/dev/scss/sassquatch/css/tests.css
+++ b/dev/scss/sassquatch/css/tests.css
@@ -1,6 +1,6 @@
 /*
 	Outputs classes (.columns-#) for each column <= $nbrOfColumns in _variables.scss
-	<div class="columns-6"></div> is 50% width in a 12-column layout
+	<div class='columns-6'></div> is 50% width in a 12-column layout
 */
 .columns-1, .columns-2, .columns-3, .columns-4, .columns-5, .columns-6, .columns-7, .columns-8, .columns-9, .columns-10, .columns-11, .columns-12 {
   width: 100%; }
