--- a/dev/scss/sassquatch/scss/_typography.scss
+++ b/dev/scss/sassquatch/scss/_typography.scss
@@ -36,7 +36,7 @@
 		}
 
 		@if $i < $max {
-			$pxValues: #{$pxValues + " "};
+			$pxValues: #{$pxValues + ' '};
 		}
 	}
 
@@ -50,7 +50,7 @@
 		}
 
 		@if $i < $max {
-			$remValues: #{$remValues + " "};
+			$remValues: #{$remValues + ' '};
 		}
 	}
 
@@ -79,7 +79,7 @@
 		}
 
 		@if $i < $max {
-			$pxValues: #{$pxValues + " "};
+			$pxValues: #{$pxValues + ' '};
 		}
 	}
 
@@ -93,7 +93,7 @@
 		}
 
 		@if $i < $max {
-			$remValues: #{$remValues + " "};
+			$remValues: #{$remValues + ' '};
 		}
 	}
 
@@ -109,7 +109,7 @@
 
 	$element: '.ellipsis' !default;
 	$ellipsiswidth: 3em !default;
-	$content: "\02026" !default;
+	$content: '\02026' !default;
 
 	#{$element} {
 		overflow: hidden;
@@ -117,7 +117,7 @@
 		line-height: $lineheightinmixin; }
 
 	#{$element}:before {
-		content:"";
+		content:'';
 		float: left;
 		width: 5px; height: $height; }
 
